# lxc-launcher

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  lxc-launcher.c
src/include/: lxc-launcher.h
src/lib/: lxc_start.c
